--- a/projects/final/styles.css
+++ b/projects/final/styles.css
@@ -30,7 +30,7 @@
     color: #2493cc;
   }
 }
-/*
+
 @keyframes colorshift {
   0% {
     background-color: #24aecc;
@@ -62,16 +62,6 @@
   100% {
     background-color: #24aecc;
   }
-} */
-
-.arrow {
-  text-align: center;
-bottom: 75px;
-right: 7px;
-}
-
-.bounce {
-  animation: bounce 2s infinite;
 }
 
 @keyframes bounce {
@@ -86,28 +76,7 @@ right: 7px;
   }
 }
 
-html {
-  height: 100%;
-
-}
-
-body {
-    font-family: 'Roboto', sans-serif;
-background-color: grey;
-  color: white;
-  text-align: center;
-  position: relative;
-  margin: 0;
-  height: 100%;
-  -webkit-font-smoothing: antialiased;
-}
-
-.logo {
-  position: fixed;
-  left: 10px;
-  margin-top: 5px;
-}
-
+/*One Page Scroll Styles*/
 .wrapper {
   height: 100% !important;
   height: 100%;
@@ -125,52 +94,10 @@ background-color: grey;
   margin: 0 auto;
 }
 
-article {
-width: 50%;
-margin: auto;
-}
-
-img {
-  margin-top: 40px;
-}
-
-
-footer{
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  text-align: center;
-  display: block;
-  padding: 3px;
-  width: 100%;
-  box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  background: rgba(255, 255, 255, 0.25);
-  font-weight: bold;
-  font-size: 13px;
-  color: #000;
-  -webkit-transition: all 500ms ease-in-out;
-  -moz-transition: all 500ms ease-in-out;
-  -o-transition: all 500ms ease-in-out;
-  transition: all 500ms ease-in-out;
-}
-
-
-#page6{
-  top: 15%;
-  left: 5%;
-}
-
-#page7{
-  top: 15%;
-  left: 5%;
-}
-
 .arrow {
-position: fixed;
-bottom: 75px;
-right: 7px;
+  position: fixed;
+  bottom: 75px;
+  right: 7px;
 }
 
 .bounce {
@@ -189,36 +116,64 @@ right: 7px;
   }
 }
 
-#revealAnim img {
-  transition: transform .6s .9s;
+html {
+  height: 100%;
 }
 
-.back {
-  transform: translate3d(-40%, 0, 0);
+body {
+  font-family: 'Roboto', sans-serif;
+  transition: color 1s linear;
+  animation: colorshift 25s infinite;
+  transition-timing-function: ease-in;
+  color: white;
+  -webkit-font-smoothing: antialiased;
 }
 
-.front {
-  transform: translate3d(61.6%, 0, 0);
+section {
+  margin: auto;
+  width: 500px;
+  height: 400px;
+  border: 10px;
+  float: left;
+
 }
 
-.side {
-  transform: translate3d(-300%, 0, 0);
+#container{
+  margin: 5%;
 }
 
-.viewing-page-3 #revealAnim img {
-  transform: translate3d(0, 0, 0);
+article {
+  position: absolute;
+  left: 25%;
+  width: 100%;
+  margin-top: 5%;
 }
+
+footer {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  display: block;
+  padding: 3px;
+  width: 100%;
+  box-sizing: border-box;
+  font-weight: bold;
+  font-size: 13px;
+  background-color: rgba(255, 255, 255, 0.25);
+  transition: all 500ms ease-in-out;
+}
+
 
 
 /*Typography */
 
 a {
+  font-weight: 700;
   color: white;
   text-decoration: none;
   border-radius: 50px;
-  width: 1.5in;
   padding: 16px;
-  margin-top: 2px;
   text-align: center;
   display: inline-block;
 }
@@ -227,19 +182,21 @@ a:visited {
   text-decoration: none;
 }
 
-h1 {
-  margin: auto;
-  font-weight:400;
-  font-size: 4.5vw;
-  line-height: 1;
-  align-items: center;
-  width: 60%;
-  margin-bottom: 1.5%;
-  transition: color 1s linear;
-  animation: colorshift2 15s infinite;
-  transition-timing-function: ease-in;
+a:hover{
+   background: rgba(255,255,255,0.3);
 }
 
+h1 {
+  margin: auto;
+  font-weight: 700;
+  font-size: 7vw;
+  line-height: 1;
+  text-align: left;
+  margin-bottom: 1.5%;
+  /* transition: color 1s linear;
+  animation: colorshift2 25s infinite;
+  transition-timing-function: ease-in; */
+}
 
 span {
   font-weight: 700;
@@ -247,22 +204,24 @@ span {
 }
 
 h1 span {
-  font-weight:700;
-  font-size: 5.5vw;
+  font-family: 'Rock Salt', cursive;
+  font-size: 5vw;
 }
 
 h3 {
-  font-weight:400;
+  font-weight: 400;
   text-align: left;
-  width: 40%;
-  font-size: 3vw;
-  line-height: 1;
-  transition: color 1s linear;
-  animation: colorshift2 15s infinite;
-  transition-timing-function: ease-in;
+  font-size: 1.75vw;
+  line-height: 1.5;
+  /* transition: color 1s linear;
+  animation: colorshift2 30s infinite;
+  transition-timing-function: ease-in; */
 }
 
-h3 span {
-  font-weight:700;
-  color: white;
+h3 span{
+  font-weight: 700;
+}
+
+br {
+  line-height: 2;
 }
