--- a/projects/doc-makerfaire/contact/styles.css
+++ b/projects/doc-makerfaire/contact/styles.css
@@ -37,78 +37,77 @@ body {
 
 
 .container {
-  max-width: 60%;
-  margin: auto;
-display: block;
+    max-width: 60%;
+    margin: auto;
+    display: block;
 }
 
-#contact input[type="text"],
-#contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="field"],
-#contact input[type="portfolio"],
-#contact input[type="ig"],
-#contact input[type="photo"],
-#contact textarea,
-#contact button[type="submit"] {
-  font: 400 18px/24px "Roboto", Helvetica, Arial, sans-serif;
+#contactForm input[type="text"],
+#contactForm input[type="email"],
+#contactForm input[type="tel"],
+#contactForm input[type="field"],
+#contactForm input[type="portfolio"],
+#contactForm input[type="ig"],
+#contactForm input[type="photo"],
+#contactForm textarea,
+#contactForm button[type="submit"] {
+    font: 400 18px/24px "Roboto", Helvetica, Arial, sans-serif;
 }
 
-#contact {
-  background: #F9F9F9;
-  padding: 25px;
-  margin: 50px 0;
+#contactForm {
+    background: #F9F9F9;
+    padding: 25px;
+    margin: 50px 0;
 }
 
-#contact h3 {
-  display: block;
-  font-size: 30px;
-  margin-bottom: 10px;
+#contactForm h3 {
+    display: block;
+    font-size: 30px;
+    margin-bottom: 10px;
 }
 
-#contact h4 {
-  margin: 5px 0 15px;
-  display: block;
-  font-size: 13px;
-  font-weight: 400;
+#contactForm h4 {
+    margin: 5px 0 15px;
+    display: block;
+    font-size: 13px;
+    font-weight: 400;
 }
 
 fieldset {
-  border: medium none !important;
-  margin: 0 0 10px;
-  min-width: 100%;
-  padding: 5px;
-  width: 100%;
+    border: medium none !important;
+    margin: 0 0 10px;
+    min-width: 100%;
+    padding: 5px;
+    width: 100%;
 }
 
-#contact input[type="text"],
-#contact input[type="email"],
-#contact input[type="tel"],
-#contact input[type="field"],
-#contact input[type="portfolio"],
-#contact input[type="ig"],
-#contact input[type="photo"],
-#contact textarea,
-#contact button[type="submit"]
-#contact textarea {
-  width: 95%;
-  border: 1px solid #ccc;
-  background: #FFF;
-  margin: 5px;
-  padding: 10px;
-  font-size: 24px;
-  line-height: 30px;
-  height: 48px;
+#contactForm input[type="text"],
+#contactForm input[type="email"],
+#contactForm input[type="tel"],
+#contactForm input[type="field"],
+#contactForm input[type="portfolio"],
+#contactForm input[type="ig"],
+#contactForm input[type="photo"],
+#contactForm textarea,
+#contactForm button[type="submit"] #contact textarea {
+    width: 95%;
+    border: 1px solid #ccc;
+    background: #FFF;
+    margin: 5px;
+    padding: 10px;
+    font-size: 24px;
+    line-height: 30px;
+    height: 48px;
 }
 
 
-#contact textarea {
-  height: 150px;
-  max-width: 100%;
-  resize: none;
+#contactForm textarea {
+    height: 150px;
+    max-width: 100%;
+    resize: none;
 }
 
-#contact button[type="submit"] {
+#contactForm button[type="submit"] {
     transition-timing-function: ease-in;
     font-family: 'Roboto', Helvetica, sans-serif;
     color: white;
@@ -122,28 +121,28 @@ fieldset {
     text-decoration: none;
 }
 
-#contact button[type="submit"]:hover {
-  background: #43A047;
-  transition: background-color 0.3s ease-in-out;
+#contactForm button[type="submit"]:hover {
+    background: #43A047;
+    transition: background-color 0.3s ease-in-out;
 }
 
-#contact button[type="submit"]:active {
-  box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
+#contactForm button[type="submit"]:active {
+    box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.5);
 }
 
 .copyright {
-  text-align: center;
+    text-align: center;
 }
 
-#contact input:focus,
-#contact textarea:focus {
-  outline: 0;
-  border: 1px solid #aaa;
+#contactForm input:focus,
+#contactForm textarea:focus {
+    outline: 0;
+    border: 1px solid #aaa;
 }
 
 
 #instructions {
-  margin-top: 7%;
+    margin-top: 7%;
 
 }
 
@@ -152,6 +151,7 @@ fieldset {
     font-size: 36px;
 
 }
+
 #part2 {
     margin-top: 10px;
     margin-bottom: 30px;
@@ -160,116 +160,129 @@ fieldset {
 /* Hamburger Nav */
 
 .sidenav {
-  height: 100%;
-  width: 0;
-  position: fixed;
-  z-index: 1;
-  top: 0;
-  right: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 60px;
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
 }
 
 .sidenav a {
     font-family: 'Roboto', Helvetica;
-  padding: 8px 8px 8px 32px;
-  text-decoration: none;
-  font-size: 25px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
-  text-align: left;
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    text-align: left;
 }
 
 .sidenav a:hover {
-  color: #f1f1f1;
+    color: #f1f1f1;
 }
 
 .sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 25px;
-  font-size: 36px;
-  margin-left: 50px;
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-left: 50px;
 }
 
 #main {
-  position: absolute;
-  top: -10px;
-  right: 0;
-  transition: margin-left .5s;
-  padding: 16px;
-  color: white;
+    position: absolute;
+    top: -12px;
+    right: 0;
+    transition: margin-left .5s;
+    padding: 16px;
+    color: white;
 }
 
 /*Changes inside nav*/
 
 @media screen and (max-height: 450px) {
-  .sidenav {
-    padding-top: 15px;
-  }
-  .sidenav a {
-    font-size: 18px;
-  }
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+    }
 }
 
 /* Hamburger menu code from: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_sidenav */
 
 /*Main*/
 
-
 header {
-  position: fixed;
-  width: 100%;
-  transition: color 2s linear;
-  animation: colorshift 60s infinite;
-  transition-timing-function: ease-in;
-  top: 0;
-  left: 0;
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
+    position: fixed;
+    width: 100%;
+    transition: color 2s linear;
+    animation: colorshift 60s infinite;
+    transition-timing-function: ease-in;
+    top: 0;
+    left: 0;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
 }
 
-header a{
-  padding: 1%;
-  font-family: 'Rock Salt', cursive;
-  font-size: 18px;
-  color: white;
+header a {
+    padding: 1%;
+    font-family: 'Rock Salt', cursive;
+    font-size: 18px;
+    color: white;
 }
 
 footer {
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  text-align: center;
-  display: block;
-  width: 100%;
-  box-sizing: border-box;
-  transition: color 20s linear;
-  animation: colorshift 30s infinite;
-  transition-timing-function: ease-in;
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    text-align: center;
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    transition: color 20s linear;
+    animation: colorshift 30s infinite;
+    transition-timing-function: ease-in;
 }
 
 footer a {
-  font-family: 'Roboto', sans-serif;
-  font-size: 14px;
-  margin-bottom: -3px;
-  margin-top: -3px;
-  color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: 14px;
+    margin-bottom: -3px;
+    margin-top: -3px;
+    color: white;
 }
 
 a {
-  font-size: 1.5vw;
-  font-weight: 700;
-  color: black;
-  text-decoration: none;
-  padding: 16px;
-  display: inline-block;
+    font-size: 1.5vw;
+    font-weight: 700;
+    color: black;
+    text-decoration: none;
+    padding: 16px;
+    display: inline-block;
 }
 
-h3{
-  font-size: 1.5vw;
+h2 {
+    padding-top: 30px;
+}
+
+h3 {
+    font-size: 1.5vw;
+}
+
+.alert {
+    text-align: center;
+    padding: 10px;
+    background: #79c879;
+    color: white;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    display: none;
 }
